--- a/public/sass/components/_panel_gettingstarted.scss
+++ b/public/sass/components/_panel_gettingstarted.scss
@@ -52,7 +52,7 @@ $path-position: $marker-size-half - ($path-height / 2);
 
   &::after {
     right: -50%;
-    content: '';
+    content: "";
     display: block;
     position: absolute;
     z-index: 1;
@@ -105,7 +105,7 @@ $path-position: $marker-size-half - ($path-height / 2);
 
       // change icon to check
       .icon-gf::before {
-        content: '\e604';
+        content: "\e604";
       }
     }
     .progress-text {
