--- a/public/sass/components/_row.scss
+++ b/public/sass/components/_row.scss
@@ -69,7 +69,7 @@
   cursor: move;
   width: 1rem;
   height: 100%;
-  background: url('../img/grab_dark.svg') no-repeat 50% 50%;
+  background: url("../img/grab_dark.svg") no-repeat 50% 50%;
   background-size: 8px;
   visibility: hidden;
   position: absolute;
