--- a/public/sass/components/_switch.scss
+++ b/public/sass/components/_switch.scss
@@ -64,8 +64,8 @@
   }
 
   input + label::before {
-    font-family: 'FontAwesome';
-    content: '\f096'; // square-o
+    font-family: "FontAwesome";
+    content: "\f096"; // square-o
     color: $text-color-weak;
     transition: transform 0.4s;
     backface-visibility: hidden;
@@ -73,11 +73,11 @@
   }
 
   input + label::after {
-    content: '\f046'; // check-square-o
+    content: "\f046"; // check-square-o
     color: $orange;
     text-shadow: $text-shadow-strong;
 
-    font-family: 'FontAwesome';
+    font-family: "FontAwesome";
     transition: transform 0.4s;
     transform: rotateY(180deg);
     backface-visibility: hidden;
