--- a/public/sass/components/_timepicker.scss
+++ b/public/sass/components/_timepicker.scss
@@ -103,10 +103,10 @@
 }
 
 .fa-chevron-left::before {
-  content: '\f053';
+  content: "\f053";
 }
 .fa-chevron-right::before {
-  content: '\f054';
+  content: "\f054";
 }
 
 .glyphicon-chevron-right {
