--- a/public/sass/pages/_login.scss
+++ b/public/sass/pages/_login.scss
@@ -371,7 +371,7 @@ select:-webkit-autofill:focus {
       left: 0;
       right: 0;
       height: 100%;
-      content: '';
+      content: "";
       display: block;
     }
 
