--- a/public/sass/components/_footer.scss
+++ b/public/sass/components/_footer.scss
@@ -25,7 +25,7 @@
     display: inline-block;
     padding-right: 2px;
     &::after {
-      content: ' | ';
+      content: " | ";
       padding-left: 2px;
     }
   }
@@ -33,7 +33,7 @@
   li:last-child {
     &::after {
       padding-left: 0;
-      content: '';
+      content: "";
     }
   }
 }
