--- a/public/sass/components/_json_explorer.scss
+++ b/public/sass/components/_json_explorer.scss
@@ -21,10 +21,10 @@
         display: none;
       }
       &.json-formatter-object::after {
-        content: 'No properties';
+        content: "No properties";
       }
       &.json-formatter-array::after {
-        content: '[]';
+        content: "[]";
       }
     }
   }
@@ -87,7 +87,7 @@
     &::after {
       display: inline-block;
       transition: transform $json-explorer-rotate-time ease-in;
-      content: '►';
+      content: "►";
     }
   }
 
