--- a/public/sass/mixins/_drop_element.scss
+++ b/public/sass/mixins/_drop_element.scss
@@ -15,7 +15,7 @@
       border: 1px solid $border-color;
 
       &:before {
-        content: '';
+        content: "";
         display: block;
         position: absolute;
         width: 0;
@@ -88,7 +88,8 @@
       left: $popover-arrow-size * 2;
     }
 
-    &.drop-element-attached-top.drop-element-attached-left.drop-target-attached-middle .drop-content {
+    &.drop-element-attached-top.drop-element-attached-left.drop-target-attached-middle
+      .drop-content {
       margin-top: $popover-arrow-size;
 
       &:before {
@@ -98,7 +99,8 @@
       }
     }
 
-    &.drop-element-attached-top.drop-element-attached-right.drop-target-attached-middle .drop-content {
+    &.drop-element-attached-top.drop-element-attached-right.drop-target-attached-middle
+      .drop-content {
       margin-top: $popover-arrow-size;
 
       &:before {
@@ -108,7 +110,8 @@
       }
     }
 
-    &.drop-element-attached-bottom.drop-element-attached-left.drop-target-attached-middle .drop-content {
+    &.drop-element-attached-bottom.drop-element-attached-left.drop-target-attached-middle
+      .drop-content {
       margin-bottom: $popover-arrow-size;
 
       &:before {
@@ -118,7 +121,8 @@
       }
     }
 
-    &.drop-element-attached-bottom.drop-element-attached-right.drop-target-attached-middle .drop-content {
+    &.drop-element-attached-bottom.drop-element-attached-right.drop-target-attached-middle
+      .drop-content {
       margin-bottom: $popover-arrow-size;
 
       &:before {
@@ -129,7 +133,8 @@
     }
 
     // Top and bottom corners
-    &.drop-element-attached-top.drop-element-attached-left.drop-target-attached-bottom .drop-content {
+    &.drop-element-attached-top.drop-element-attached-left.drop-target-attached-bottom
+      .drop-content {
       margin-top: $popover-arrow-size;
 
       &:before {
@@ -139,7 +144,8 @@
       }
     }
 
-    &.drop-element-attached-top.drop-element-attached-right.drop-target-attached-bottom .drop-content {
+    &.drop-element-attached-top.drop-element-attached-right.drop-target-attached-bottom
+      .drop-content {
       margin-top: $popover-arrow-size;
 
       &:before {
@@ -149,7 +155,8 @@
       }
     }
 
-    &.drop-element-attached-bottom.drop-element-attached-left.drop-target-attached-top .drop-content {
+    &.drop-element-attached-bottom.drop-element-attached-left.drop-target-attached-top
+      .drop-content {
       margin-bottom: $popover-arrow-size;
 
       &:before {
@@ -159,7 +166,8 @@
       }
     }
 
-    &.drop-element-attached-bottom.drop-element-attached-right.drop-target-attached-top .drop-content {
+    &.drop-element-attached-bottom.drop-element-attached-right.drop-target-attached-top
+      .drop-content {
       margin-bottom: $popover-arrow-size;
 
       &:before {
@@ -170,7 +178,8 @@
     }
 
     // Side corners
-    &.drop-element-attached-top.drop-element-attached-right.drop-target-attached-left .drop-content {
+    &.drop-element-attached-top.drop-element-attached-right.drop-target-attached-left
+      .drop-content {
       margin-right: $popover-arrow-size;
 
       &:before {
@@ -180,7 +189,8 @@
       }
     }
 
-    &.drop-element-attached-top.drop-element-attached-left.drop-target-attached-right .drop-content {
+    &.drop-element-attached-top.drop-element-attached-left.drop-target-attached-right
+      .drop-content {
       margin-left: $popover-arrow-size;
 
       &:before {
@@ -190,7 +200,8 @@
       }
     }
 
-    &.drop-element-attached-bottom.drop-element-attached-right.drop-target-attached-left .drop-content {
+    &.drop-element-attached-bottom.drop-element-attached-right.drop-target-attached-left
+      .drop-content {
       margin-right: $popover-arrow-size;
 
       &:before {
@@ -200,7 +211,8 @@
       }
     }
 
-    &.drop-element-attached-bottom.drop-element-attached-left.drop-target-attached-right .drop-content {
+    &.drop-element-attached-bottom.drop-element-attached-left.drop-target-attached-right
+      .drop-content {
       margin-left: $popover-arrow-size;
 
       &:before {
@@ -212,7 +224,7 @@
   }
 }
 
-@mixin drop-animation-scale($themePrefix: 'drop', $themeName: 'default', $attachmentOffset: 0, $easing: 'linear') {
+@mixin drop-animation-scale($themePrefix: "drop", $themeName: "default", $attachmentOffset: 0, $easing: "linear") {
   .#{$themePrefix}-element.#{$themePrefix}-#{$themeName} {
     transform: translateZ(0);
     transition: opacity 100ms;
@@ -235,16 +247,20 @@
       }
     }
     // Centers and middles
-    &.#{$themePrefix}-element-attached-bottom.#{$themePrefix}-element-attached-center .#{$themePrefix}-content {
+    &.#{$themePrefix}-element-attached-bottom.#{$themePrefix}-element-attached-center
+      .#{$themePrefix}-content {
       transform-origin: 50% calc(100% + #{$attachmentOffset});
     }
-    &.#{$themePrefix}-element-attached-top.#{$themePrefix}-element-attached-center .#{$themePrefix}-content {
+    &.#{$themePrefix}-element-attached-top.#{$themePrefix}-element-attached-center
+      .#{$themePrefix}-content {
       transform-origin: 50% (-$attachmentOffset);
     }
-    &.#{$themePrefix}-element-attached-right.#{$themePrefix}-element-attached-middle .#{$themePrefix}-content {
+    &.#{$themePrefix}-element-attached-right.#{$themePrefix}-element-attached-middle
+      .#{$themePrefix}-content {
       transform-origin: calc(100% + #{$attachmentOffset}) 50%;
     }
-    &.#{$themePrefix}-element-attached-left.#{$themePrefix}-element-attached-middle .#{$themePrefix}-content {
+    &.#{$themePrefix}-element-attached-left.#{$themePrefix}-element-attached-middle
+      .#{$themePrefix}-content {
       transform-origin: -($attachmentOffset 50%);
     }
     // Top and bottom corners
