--- a/public/sass/pages/_playlist.scss
+++ b/public/sass/pages/_playlist.scss
@@ -84,11 +84,11 @@
     background-color: $list-item-bg;
     margin-bottom: 4px;
     .search-result-icon:before {
-      content: '\f009';
+      content: "\f009";
     }
 
     &.search-item-dash-home .search-result-icon:before {
-      content: '\f015';
+      content: "\f015";
     }
   }
 
