--- a/public/app/plugins/datasource/mssql/partials/config.html
+++ b/public/app/plugins/datasource/mssql/partials/config.html
@@ -4,7 +4,7 @@
 <div class="gf-form-group">
 	<div class="gf-form max-width-30">
 		<span class="gf-form-label width-7">Host</span>
-		<input type="text" class="gf-form-input" ng-model='ctrl.current.url' placeholder="localhost:1433" bs-typeahead="{{['localhost:1433', '192.168.0.101:1433']}}" required></input>
+		<input type="text" class="gf-form-input" ng-model='ctrl.current.url' placeholder="localhost:1433" bs-typeahead="{{['localhost:1433']}}" required></input>
 	</div>
 
 	<div class="gf-form max-width-30">
@@ -32,8 +32,6 @@
 			Grafana does not validate that queries are safe so queries can contain any SQL statement. For example, statements
 			like <code>USE otherdb;</code> and <code>DROP TABLE user;</code> would be executed. To protect against this we
 			<strong>Highly</strong> recommmend you create a specific MSSQL user with restricted permissions.
-
-			Checkout the <a class="external-link" target="_blank" href="http://docs.grafana.org/features/datasources/mssql/">MSSQL Data Source Docs</a> for more information.
 		</p>
 	</div>
 </div>
