--- a/public/app/plugins/datasource/mssql/partials/config.html
+++ b/public/app/plugins/datasource/mssql/partials/config.html
@@ -17,9 +17,14 @@
 			<span class="gf-form-label width-7">User</span>
 			<input type="text" class="gf-form-input" ng-model='ctrl.current.user' placeholder="user"></input>
 		</div>
-		<div class="gf-form max-width-15">
+		<div class="gf-form max-width-15" ng-if="!ctrl.current.secureJsonFields.password">
 			<span class="gf-form-label width-7">Password</span>
-			<input type="password" class="gf-form-input" ng-model='ctrl.current.password' placeholder="password"></input>
+			<input type="password" class="gf-form-input" ng-model='ctrl.current.secureJsonData.password' placeholder="password"></input>
+		</div>
+		<div class="gf-form max-width-19" ng-if="ctrl.current.secureJsonFields.password">
+			<span class="gf-form-label width-7">Password</span>
+			<input type="text" class="gf-form-input" disabled="disabled" value="configured">
+			<a class="btn btn-secondary gf-form-btn" href="#" ng-click="ctrl.current.secureJsonFields.password = false">reset</a>
 		</div>
 	</div>
 </div>
