--- a/public/app/plugins/datasource/mssql/partials/annotations.editor.html
+++ b/public/app/plugins/datasource/mssql/partials/annotations.editor.html
@@ -20,7 +20,7 @@
 		<pre class="gf-form-pre alert alert-info"><h6>Annotation Query Format</h6>
 An annotation is an event that is overlayed on top of graphs. The query can have up to three columns per row, the <b>time</b> column is mandatory. Annotation rendering is expensive so it is important to limit the number of rows returned.
 
-- column with alias: <b>time</b> for the annotation event time (in UTC). Use unix timestamp in seconds or any native date data type.
+- column with alias: <b>time</b> for the annotation event time. Use epoch time or any native date data type.
 - column with alias: <b>text</b> for the annotation text.
 - column with alias: <b>tags</b> for annotation tags. This is a comma separated string of tags e.g. 'tag1,tag2'.
 
