--- a/public/app/features/dashboard/partials/folder_settings.html
+++ b/public/app/features/dashboard/partials/folder_settings.html
@@ -11,7 +11,7 @@
 			</div>
 			<div class="gf-form-button-row">
 				<button type="submit" class="btn btn-success" ng-disabled="!ctrl.canSave || !ctrl.hasChanged">
-					Save
+					<i class="fa fa-save"></i>Save
 				</button>
 				<button class="btn btn-danger" ng-click="ctrl.delete($event)" ng-disabled="!ctrl.canSave">
 					<i class="fa fa-trash"></i>
