--- a/public/views/index.template.html
+++ b/public/views/index.template.html
@@ -16,7 +16,7 @@
   <link rel="icon" type="image/png" href="public/img/fav32.png">
   <link rel="mask-icon" href="public/img/grafana_mask_icon.svg" color="#F05A28">
   <link rel="apple-touch-icon" href="public/img/fav32.png">
-  
+
 </head>
 
 <body ng-cloak class="theme-[[ .Theme ]]">
@@ -40,6 +40,7 @@
     </div>
 
     <div class="main-view">
+      <!-- Not sure do we really need grafana-scrollbar here? -->
       <div class="scroll-canvas" grafana-scrollbar>
         <div ng-view></div>
 
