removed padding for icons and added margin

--- a/public/sass/pages/_alerting.scss
+++ b/public/sass/pages/_alerting.scss
@@ -108,7 +108,7 @@
   justify-content: center;
   align-items: center;
   width: 40px;
-  padding: 0 28px 0 16px;
+  margin-right: 8px;
   .icon-gf,
   .fa {
     font-size: 200%;
