--- a/public/sass/pages/_alerting.scss
+++ b/public/sass/pages/_alerting.scss
@@ -108,7 +108,8 @@
   justify-content: center;
   align-items: center;
   width: 40px;
-  margin-right: 8px;
+  //margin-right: 8px;
+  padding: 0 4px 0 2px;
   .icon-gf,
   .fa {
     font-size: 200%;
