--- a/public/views/index.template.html
+++ b/public/views/index.template.html
@@ -40,8 +40,7 @@
     </div>
 
     <div class="main-view">
-      <!-- Not sure do we really need grafana-scrollbar here? -->
-      <div class="scroll-canvas" grafana-scrollbar>
+      <div class="scroll-canvas">
         <div ng-view></div>
 
         <footer class="footer">
