dashboard: show baron scrollbar in dashboard panel when mouse is over
This should make the scrolling user experience much better since it
will highlight and show that content actually can be scrolled when
hovering over a panel.

--- a/public/sass/components/_scrollbar.scss
+++ b/public/sass/components/_scrollbar.scss
@@ -268,8 +268,12 @@
   }
 }
 
-.baron._scrolling > .baron__track .baron__bar {
+.panel-hover-highlight .baron__track .baron__bar {
   opacity: 0.6;
+}
+
+.baron._scrolling > .baron__track .baron__bar {
+  opacity: 0.9;
 }
 
 .baron__control {
