Show Grafana version and build in Help menu
* establishes Help as the single place to look for the Grafana version
* version is passed as menu sub-title to side menu
* added rendering of sub-title, plus styles
* sub-title was used by profile menu (its value is the login string),
but was not shown; now showing this value on condition that login name
is different from user name

--- a/public/app/core/components/sidemenu/sidemenu.html
+++ b/public/app/core/components/sidemenu/sidemenu.html
@@ -70,6 +70,9 @@
           {{::child.text}}
         </a>
       </li>
+      <li ng-if="item.subTitle" class="side-menu-subtitle">
+        <span class="sidemenu-item-text">{{::item.subTitle}}</span>
+      </li>
       <li class="side-menu-header">
         <span class="sidemenu-item-text">{{::item.text}}</span>
       </li>
