--- a/public/app/core/components/sidemenu/sidemenu.html
+++ b/public/app/core/components/sidemenu/sidemenu.html
@@ -54,6 +54,9 @@
       </span>
     </a>
     <ul class="dropdown-menu dropdown-menu--sidemenu" role="menu">
+      <li ng-if="item.subTitle" class="sidemenu-subtitle">
+        <span class="sidemenu-item-text">{{::item.subTitle}}</span>
+      </li>
       <li ng-if="item.showOrgSwitcher" class="sidemenu-org-switcher">
         <a ng-click="ctrl.switchOrg()">
           <div>
@@ -69,9 +72,6 @@
           <i class="{{::child.icon}}" ng-show="::child.icon"></i>
           {{::child.text}}
         </a>
-      </li>
-      <li ng-if="item.subTitle" class="side-menu-subtitle">
-        <span class="sidemenu-item-text">{{::item.subTitle}}</span>
       </li>
       <li class="side-menu-header">
         <span class="sidemenu-item-text">{{::item.text}}</span>
