--- a/public/sass/components/_panel_add_panel.scss
+++ b/public/sass/components/_panel_add_panel.scss
@@ -50,7 +50,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   overflow: auto;
-  height: calc(100% - 50px);
+  height: 100%;
   align-content: flex-start;
   justify-content: space-around;
   position: relative;
