added pointer to show more, reset values on new query

--- a/public/app/features/templating/partials/editor.html
+++ b/public/app/features/templating/partials/editor.html
@@ -286,7 +286,7 @@
           <span class="gf-form-label">{{option.text}}</span>
         </div>
         <div class="gf-form" ng-if= "current.options.length > optionsLimit">
-          <span class="gf-form-label btn-secondary" ng-click="showMoreOptions()">Show more</span>
+          <a class="gf-form-label btn-secondary" ng-click="showMoreOptions()">Show more</a>
         </div>
 			</div>
 		</div>
