move queryTimeout option to common setting

--- a/public/app/features/plugins/partials/ds_http_settings.html
+++ b/public/app/features/plugins/partials/ds_http_settings.html
@@ -156,4 +156,13 @@
       </info-popover>
     </div>
   </div>
+  <div class="gf-form-inline">
+    <div class="gf-form">
+      <span class="gf-form-label width-10">Query timeout</span>
+      <input type="text" class="gf-form-input width-9" ng-model="current.jsonData.queryTimeout" spellcheck='false' placeholder="60s"></input>
+      <info-popover mode="right-absolute">
+        Set the Query timeout.
+      </info-popover>
+    </div>
+  </div>
 </div>
