--- a/public/sass/pages/_explore.scss
+++ b/public/sass/pages/_explore.scss
@@ -1,6 +1,20 @@
 .explore {
-  .explore-container {
+  width: 100%;
+
+  &-container {
     padding: 2rem;
+  }
+
+  &-wrapper {
+    display: flex;
+
+    > .explore-split {
+      width: 50%;
+    }
+  }
+
+  .explore-first-button {
+    margin-left: 15px;
   }
 
   .explore-graph {
@@ -12,13 +26,27 @@
     padding: 10px 10px 5px 10px;
   }
 
-  .navbar-page-btn .fa {
-    position: relative;
-    top: -1px;
-    font-size: 19px;
-    line-height: 8px;
-    opacity: 0.75;
-    margin-right: 8px;
+  .navbar {
+    flex-wrap: wrap;
+    height: auto;
+  }
+
+  .navbar-page-btn {
+    margin-right: 1rem;
+
+    .fa {
+      position: relative;
+      top: -1px;
+      font-size: 19px;
+      line-height: 8px;
+      opacity: 0.75;
+      margin-right: 8px;
+    }
+  }
+
+  .navbar-button.active {
+    color: #0083b3;
+    background-color: white;
   }
 
   .elapsed-time {
@@ -50,6 +78,10 @@
   .relative {
     position: relative;
   }
+}
+
+.explore + .explore {
+  border-left: 1px dotted #aaa;
 }
 
 .query-row {
