--- a/public/app/plugins/datasource/postgres/partials/query.editor.html
+++ b/public/app/plugins/datasource/postgres/partials/query.editor.html
@@ -36,8 +36,8 @@
       </div>
 
       <div class="gf-form" ng-repeat="part in selectParts">
-        <query-part-editor class="gf-form-label query-part" part="part" handle-event="ctrl.handleSelectPartEvent(selectParts, part, $event)">
-        </query-part-editor>
+        <sql-part-editor class="gf-form-label sql-part" part="part" handle-event="ctrl.handleSelectPartEvent(selectParts, part, $event)">
+        </sql-part-editor>
       </div>
 
       <div class="gf-form">
@@ -72,10 +72,10 @@
           <span>GROUP BY</span>
         </label>
 
-        <query-part-editor  ng-repeat="part in ctrl.queryModel.groupByParts"
-                            part="part" class="gf-form-label query-part"
+        <sql-part-editor  ng-repeat="part in ctrl.queryModel.groupByParts"
+                            part="part" class="gf-form-label sql-part"
                             handle-event="ctrl.handleGroupByPartEvent(part, $index, $event)">
-        </query-part-editor>
+        </sql-part-editor>
       </div>
 
       <div class="gf-form">
