--- a/public/app/core/components/search/search.html
+++ b/public/app/core/components/search/search.html
@@ -45,14 +45,14 @@
         </tag-filter>
       </div>
 
-      <div class="search-filter-box" ng-if="ctrl.isEditor">
+      <div class="search-filter-box" ng-if="ctrl.isEditor || ctrl.hasEditPermissionInFolders">
         <a href="dashboard/new" class="search-filter-box-link">
           <i class="gicon gicon-dashboard-new"></i> New dashboard
         </a>
-        <a href="dashboards/folder/new" class="search-filter-box-link">
+        <a href="dashboards/folder/new" class="search-filter-box-link" ng-if="ctrl.isEditor">
           <i class="gicon gicon-folder-new"></i> New folder
         </a>
-        <a href="dashboard/import" class="search-filter-box-link">
+        <a href="dashboard/import" class="search-filter-box-link" ng-if="ctrl.isEditor">
           <i class="gicon gicon-dashboard-import"></i> Import dashboard
         </a>
         <a class="search-filter-box-link" target="_blank" href="https://grafana.com/dashboards?utm_source=grafana_search">
