made folder text smaller

--- a/public/sass/components/_search.scss
+++ b/public/sass/components/_search.scss
@@ -211,6 +211,7 @@
 .search-item__body-folder-title {
   color: $text-color-weak;
   padding-left: 0.25rem;
+  font-size: $font-size-xs;
 }
 
 .search-item__icon {
